--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <table>
 
     <tr>
-    <td><img src="C:\Users\u\Desktop\Programming\bike.jpg" alt="Avatar"></td>
+    <td><img src="bike.jpg" alt="Avatar"></td>
      <td><h1> Sai Ram Thripuram</h1> <p> Get in touch with us for your Banking needs on our helpline number. Now you can get access to your Bank Accounts, Credit Cards, Loans, Demat Account services over the call. </p></td>
      
     </tr>
